<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/flying_saucer" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tittle_error_upper"
            android:textAlignment="center"
            android:textColor="@color/color_tittle_err_up"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/tittle_error_middle"
            android:textAlignment="center"
            android:textColor="@color/color_tittle_err_mid"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/bnt_try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/tittle_error_bottom"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackground"
            android:textColor="@color/color_tittle_err_bot"
            android:textSize="16sp"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>